add css and html

--- a/crud-app/login.html
+++ b/crud-app/login.html
@@ -1,31 +1,115 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Crud app Login</title>
     <link rel="stylesheet" href="./style.css">
-  </head>
-  <body>
-    <div class="container">
-        <section>
-            <form action="login.html" method="POST">
-                <div>
-                    <label for="username">Username</label>
-                    <input type="text" name="username" placeholder="username">
-                    <span></span>
-                </div>
-                <div>
-                    <label for="password">Password</label>
-                    <input type="text" name="password" placeholder="password">
-                    <span></span>
-                </div>
-                <button id="login" onclick="validate()">Login</button>
-            </form>
-        </section>
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"></a>
+                    </li>
+                </ul>
+                <form class="d-flex">
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Login
+                    </button>
+
+                </form>
+            </div>
+        </div>
+    </nav>
+    <div class="container-fluid banner">
+
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <section class="container my-5">
+        <div>
+            <div class="upperdiv">
+                <div>
+                    <img src="./images/mumbai.jpg" alt="">
+                    <p class="text">Mumbai</p>
+                </div>
+                <div>
+                    <img src="./images/pune.jpg" alt="">
+                    <p class="text">Pune</p>
+                </div>
+                <div>
+                    <img src="./images/benglore.jpg" alt="">
+                    <p class="text">Benglore</p>
+                </div>
+            </div>
+            <div id="more-city" style="display:none;">
+            <div class="upperdiv mt-5">
+                <div>
+                    <img src="./images/noida.jpg" alt="">
+                    <p class="text">Noida</p>
+                </div>
+                <div>
+                    <img src="./images/new-delhi.jpg" alt="">
+                    <p class="text">New-delhi</p>
+                </div>
+                <div>
+                    <img src="./images/Chennai.jpg" alt="">
+                    <p class="text">Chennai</p>
+                </div>
+            </div>
+        </div>
+        <div class="mt-5 text-center">
+            <input type="button" class="btn btn-danger" value="View More" id="viewbtn" onclick="toggle(this)">
+        </div>
+        </div>
+    </section>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Fill Credentials</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form action="login.html" method="POST">
+                        <div>
+                            <label for="username">Username</label>
+                            <input type="text" name="username" placeholder="username">
+                            <span></span>
+                        </div>
+                        <div>
+                            <label for="password">Password</label>
+                            <input type="text" name="password" placeholder="password">
+                            <span></span>
+                        </div>
+                        <button id="login" class="mt-3" onclick="validate()">Login</button>
+                    </form>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <script src="./script.js"></script>
 </body>
+
 </html>
