--- a/crud-app/login.html
+++ b/crud-app/login.html
@@ -30,7 +30,7 @@
                 </ul>
                 <form class="d-flex">
                     <!-- Button trigger modal -->
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    <button type="button" class="btn btn-primary"  data-bs-toggle="modal" data-bs-target="#exampleModal">
                         Login
                     </button>
 
@@ -80,32 +80,27 @@
     </section>
 
     <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Fill Credentials</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+  
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Fill Credentials</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form id="form_id" method="post" name="myform">
+                            <label>User Name :</label>
+                            <input type="text" name="username" id="username" />
+                            <label>Password :</label>
+                            <input type="password" name="password" id="password" />
+                            <input type="button" value="Login" id="submit" class="d-block mt-4" onclick="validate()" />
+                        </form>
+                    </div>
                 </div>
-                <div class="modal-body">
-                    <form action="login.html" method="POST">
-                        <div>
-                            <label for="username">Username</label>
-                            <input type="text" name="username" placeholder="username">
-                            <span></span>
-                        </div>
-                        <div>
-                            <label for="password">Password</label>
-                            <input type="text" name="password" placeholder="password">
-                            <span></span>
-                        </div>
-                        <button id="login" class="mt-3" onclick="validate()">Login</button>
-                    </form>
-                </div>
-
             </div>
         </div>
-    </div>
+  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
