add crud app assignment task

--- a/assignmentList.html
+++ b/assignmentList.html
@@ -11,8 +11,9 @@
     <div class="container p-5" style="border: 1px solid;">
         <h2>Js Tasks</h2>
         <ol class="pl-3">
-            <li><div><a href="./todoList/todo.html">Todo List</a></div></li>
-            
+            <li><div><a href="./todoList/todo.html">Todo List</a></div></li>  
+            <li><div><a href="./crud-app-login/login.html">Login page</a></div></li>  
+            <li><div><a href="./crud_app_addlistdata/crud_app/index.html">Add data in list</a></div></li>  
         </ol>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
