--- a/crud-app-login/login.html
+++ b/crud-app-login/login.html
@@ -30,7 +30,7 @@
                 </ul>
                 <form class="d-flex">
                     <!-- Button trigger modal -->
-                    <button type="button" class="btn btn-primary"  data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    <button type="button" class="btn btn-primary" onclick="loginbtn()" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         Login
                     </button>
 
